deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javaapp
spec:
  selector:
    matchLabels:
      app: javaapp
  template:
    metadata:
      labels:
        app: javaapp
    spec:
      containers:
      - name: javaapp
        image: prajwalacr.azurecr.io/myjavapp1:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "150m"
          limits:
            memory: "500Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
      restartPolicy: Always
