service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-svc
spec:
  selector:
    app: javaapp
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
