ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: javaingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: new-svc
          servicePort: 8080
